// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render a different name, prompt, and beta tag if provided 1`] = `
<Header
  indexPatternName="test index pattern"
  isBeta={true}
  isIncludingSystemIndices={false}
  onChangeIncludingSystemIndices={[Function]}
  prompt={
    <div>
      Test prompt
    </div>
  }
>
  <div>
    <EuiTitle>
      <h1
        className="euiTitle euiTitle--medium"
      >
        Create test index pattern
         
        <EuiBetaBadge
          label="Beta"
        >
          <span
            className="euiBetaBadge"
            title="Beta"
          >
            Beta
          </span>
        </EuiBetaBadge>
      </h1>
    </EuiTitle>
    <EuiFlexGroup
      alignItems="flexEnd"
      justifyContent="spaceBetween"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexEnd euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiText
              size="s"
            >
              <div
                className="euiText euiText--small"
              >
                <p>
                  <EuiTextColor
                    color="subdued"
                  >
                    <span
                      className="euiTextColor euiTextColor--subdued"
                    >
                      <FormattedMessage
                        defaultMessage="Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
                        id="indexPatternManagement.createIndexPatternLabel"
                        values={Object {}}
                      >
                        <span>
                          Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations.
                        </span>
                      </FormattedMessage>
                    </span>
                  </EuiTextColor>
                </p>
              </div>
            </EuiText>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiSpacer
      size="s"
    >
      <div
        className="euiSpacer euiSpacer--s"
      />
    </EuiSpacer>
    <div>
      Test prompt
    </div>
    <EuiSpacer
      size="m"
    >
      <div
        className="euiSpacer euiSpacer--m"
      />
    </EuiSpacer>
  </div>
</Header>
`;

exports[`Header should render normally 1`] = `
<Header
  indexPatternName="test index pattern"
  isIncludingSystemIndices={true}
  onChangeIncludingSystemIndices={[Function]}
>
  <div>
    <EuiTitle>
      <h1
        className="euiTitle euiTitle--medium"
      >
        Create test index pattern
      </h1>
    </EuiTitle>
    <EuiFlexGroup
      alignItems="flexEnd"
      justifyContent="spaceBetween"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexEnd euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiText
              size="s"
            >
              <div
                className="euiText euiText--small"
              >
                <p>
                  <EuiTextColor
                    color="subdued"
                  >
                    <span
                      className="euiTextColor euiTextColor--subdued"
                    >
                      <FormattedMessage
                        defaultMessage="Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
                        id="indexPatternManagement.createIndexPatternLabel"
                        values={Object {}}
                      >
                        <span>
                          Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations.
                        </span>
                      </FormattedMessage>
                    </span>
                  </EuiTextColor>
                </p>
              </div>
            </EuiText>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiSpacer
      size="m"
    >
      <div
        className="euiSpacer euiSpacer--m"
      />
    </EuiSpacer>
  </div>
</Header>
`;

exports[`Header should render without including system indices 1`] = `
<Header
  indexPatternName="test index pattern"
  isIncludingSystemIndices={false}
  onChangeIncludingSystemIndices={[Function]}
>
  <div>
    <EuiTitle>
      <h1
        className="euiTitle euiTitle--medium"
      >
        Create test index pattern
      </h1>
    </EuiTitle>
    <EuiFlexGroup
      alignItems="flexEnd"
      justifyContent="spaceBetween"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexEnd euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiText
              size="s"
            >
              <div
                className="euiText euiText--small"
              >
                <p>
                  <EuiTextColor
                    color="subdued"
                  >
                    <span
                      className="euiTextColor euiTextColor--subdued"
                    >
                      <FormattedMessage
                        defaultMessage="Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
                        id="indexPatternManagement.createIndexPatternLabel"
                        values={Object {}}
                      >
                        <span>
                          Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations.
                        </span>
                      </FormattedMessage>
                    </span>
                  </EuiTextColor>
                </p>
              </div>
            </EuiText>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiSpacer
      size="m"
    >
      <div
        className="euiSpacer euiSpacer--m"
      />
    </EuiSpacer>
  </div>
</Header>
`;
